fix arrows hiding. hide scrollbar on webkit-browsers

--- a/src/components/Common/Breadcrumbs/Views/Common/Styles/desktopCommon.scss
+++ b/src/components/Common/Breadcrumbs/Views/Common/Styles/desktopCommon.scss
@@ -9,7 +9,6 @@
         white-space: nowrap;
 
         .item {
-            padding: 0 px(46);
             border-radius: px(20);
             background-color: $lightGray;
             color: $darkGray;
@@ -18,15 +17,21 @@
 
             a {
                 color: $darkGray;
+                padding: px(22) px(46) px(20);
+
             }
 
             &:last-of-type {
-                padding: 0;
                 background-color: unset;
+
+                a {
+                    padding: 0;
+                }
             }
         }
 
         .arrow {
+            flex-shrink: 0;
             width: px(12);
             margin: px(28) px(38) 0;
         }
