--- a/src/components/Common/Breadcrumbs/Views/Common/Styles/phoneCommon.scss
+++ b/src/components/Common/Breadcrumbs/Views/Common/Styles/phoneCommon.scss
@@ -3,6 +3,10 @@
     background-color: $white;
     overflow-x: scroll;
 
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
     .rowItems {
         display: flex;
         justify-content: flex-start;
@@ -11,7 +15,6 @@
         white-space: nowrap;
 
         .item {
-            padding: 0 px(24);
             border-radius: px(20);
             background-color: $lightGray;
             color: $darkGray;
@@ -19,16 +22,22 @@
             line-height: px(74);
 
             a {
+                padding: 0 px(24);
                 color: $darkGray;
             }
 
             &:last-of-type {
                 padding: 0 px(24) 0 0;
                 background-color: unset;
+
+                a {
+                    padding: 0;
+                }
             }
         }
 
         .arrow {
+            flex-shrink: 0;
             width: px(8);
             margin: px(28) px(20) 0;
         }
