--- a/src/components/Common/Breadcrumbs/Views/Common/Styles/phoneLandscape.scss
+++ b/src/components/Common/Breadcrumbs/Views/Common/Styles/phoneLandscape.scss
@@ -8,10 +8,16 @@
         padding: 0;
 
         .item {
-            padding: 0 px(26);
+            a {
+                padding: 0 px(26);
+            }
 
             &:last-of-type {
                 padding: 0;
+
+                a {
+                    padding: 0;
+                }
             }
         }
     }
