--- a/src/components/Common/Breadcrumbs/Views/Common/Styles/tabletPortrait.scss
+++ b/src/components/Common/Breadcrumbs/Views/Common/Styles/tabletPortrait.scss
@@ -9,10 +9,14 @@
         padding: 0;
 
         .item {
-            padding: 0 px(26);
+            a {
+                padding: 0 px(26);
+            }
 
             &:last-of-type {
-                padding: 0;
+                a {
+                    padding: 0;
+                }
             }
         }
 
